# little-music-bot

./: README.md  main.py  pyproject.toml  requirments.txt  sample.json  setup.cfg
music_bot/: __init__.py  download.py  error.py  link_recognition.py  music_bot.py  nico_download.py  process_bil_url.py  process_ytb_url.py
tests/: test_link.py
