[metadata]
name = music-bot
description = telegarm bot to download ytb music
author = RibosomeK
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    music_bot
install_requires =
    python-telegram-bot
    requests
    youtube-dl
    beautifulsoup4
    mutagen
python_requires = >=3.8
package_dir =
    =.
zip_safe = no

